Replace List,get(0) with List.getFirst()
New with Java 21 and a little easier to read.